refator: 채팅방에서 키워드 검색시 해당 지점으로 점프하게 리팩토링